feat: auth, grpc, discover, embedded map